--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -30,10 +30,10 @@
 			<div class="row container-fluid">
 					<ul class="user-menu">
 						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">Registrate</a></li>
-						<li><a href="#">Nosotros</a></li>
-						<li><a href="#">Ingresar</a></li>		
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="registro.html">Registrate</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="login.html">Ingresar</a></li>		
 					</ul>
 			</div>
 		</div>
@@ -56,40 +56,16 @@
 			</section>									
 			<section id="footer-bar">
 				<div class="row">
-					<div class="span3">
+					<div class="span3 abajo">
 						<h4>Navegar</h4>
 						<ul class="nav">
-							<li><a href="./index.html">Inicio</a></li>  
-							<li><a href="./about.html">Sobre nosotros</a></li>
-							<li><a href="./contact.html">Contactanos</a></li>
-							<li><a href="./cart.html">Carrito</a></li>
-							<li><a href="./register.html">Inicio de sesion</a></li>							
+							<li><a href="index.html">Inicio</a></li>  
+							<li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
+							<li><a href="registro.html">Registrate</a></li>
+							<li><a href="login.html">Inicio de sesion</a></li>							
 						</ul>					
-					</div>
-					<div class="span4">
-						<h4>Mi cuenta</h4>
-						<ul class="nav">
-							<li><a href="#">Mi cuenta</a></li>
-							<li><a href="#">Historial de pedidos</a></li>
-							<li><a href="#">Lista de deseos</a></li>
-							<li><a href="#">Novedades</a></li>
-						</ul>
-					</div>
-					<div class="span5">
-						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
-						<p>Shopper es la tienda online más completa para mascotas creada por pet lovers para pet lovers!. Somos la tienda en línea de mascotas con mayor variedad de productos y servicios a domicilio de Latinoamérica (Colombia, Chile y México), contamos con más de 4.000 productos (alimentos, dietas naturales, snacks, medicinas, higiene y accesorios) y próximamente, más de 17 servicios como (medicina veterinaria prepagada, veterinario a domicilio, vacunación, baños, funeraria, entrenador, cuidadores, información de colegios, fundaciones, entre otros.</p>
-						<br/>
-						<span class="social_icons">
-							<a class="facebook" href="#">Facebook</a>
-							<a class="twitter" href="#">Twitter</a>
-							<a class="skype" href="#">Skype</a>
-							<a class="vimeo" href="#">Vimeo</a>
-						</span>
-					</div>					
+					</div>						
 				</div>	
-			</section>
-			<section id="copyright">
-				<span>Copyright 2013 bootstrappage template  All right reserved.</span>
 			</section>
 		</div>
 		<script src="themes/js/common.js"></script>		
