--- a/main_administrador.html
+++ b/main_administrador.html
@@ -31,10 +31,10 @@
 			<div class="row container-fluid">
 					<ul class="user-menu">
 						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">Registrate</a></li>
-						<li><a href="#">Nosotros</a></li>
-						<li><a href="#">Ingresar</a></li>		
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="registro.html">Registrate</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="login.html">Ingresar</a></li>	
 					</ul>
 			</div>
 		</div>
@@ -234,11 +234,10 @@
 					<div class="span3 abajo">
 						<h4>Navegar</h4>
 						<ul class="nav">
-							<li><a href="./index.html">Inicio</a></li>  
-							<li><a href="./about.html">Sobre nosotros</a></li>
-							<li><a href="./contact.html">Contactanos</a></li>
-							<li><a href="./cart.html">Carrito</a></li>
-							<li><a href="./register.html">Inicio de sesion</a></li>							
+							<li><a href="index.html">Inicio</a></li>  
+							<li><a href="sobre_nosotros.html">Sobre nosotros</a></li>
+							<li><a href="registro.html">Registrate</a></li>
+							<li><a href="login.html">Inicio de sesion</a></li>							
 						</ul>					
 					</div>						
 				</div>	
