--- a/inventario.html
+++ b/inventario.html
@@ -27,52 +27,22 @@
 	</head>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4">
-					<form method="POST" class="search_form">
-						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
-					</form>
-				</div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="historialCompra.html">Mi Cuenta</a></li>
-                            <li><a href="register admin.html">Admin</a></li>
-							<li><a href="cart.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="register.html">Iniciar sesion</a></li>				
-						</ul>
-					</div>
-				</div>
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="administrar_tienda.html">Administrar Tienda</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="index.html">Cerrar Sesión</a></li>		
+					</ul>
 			</div>
 		</div>
-		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
-						<ul>
-							<li><a>Perros</a>					
-								<ul>
-									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
-									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
-								</ul>
-							</li>															
-							<li><a>Gatos</a>					
-								<ul>
-									<li><a href="./alimentoGato.html">Alimentos</a></li>									
-									<li><a href="./accesorioGato.html">Accesorios</a></li>								
-								</ul>
-							</li>							
-						</ul>
-					</nav>
-				</div>
-			</section>				
+		<div id="wrapper" class="container">				
 			<section class="main-content">
 			    <br>
 				<h2><span>Mantenedor de bodega</span></h2>
                 <div class="span5">
-					<table>
+					<table class="table table-striped" style="border: 3px; color: black;">
 						<tr>
 							<td><strong>ID:</strong></td>
 							<td><input type="text"  Placeholder=""></td>
@@ -80,6 +50,7 @@
 						<tr>
 							<td><strong>Categoria:</strong></td>
 							<td><select name="" id="cbox1">
+								<option value="0"></option>
 								<option value="1">Perros</option>
 								<option value="2">Gatos</option>
 							</select></td>
@@ -87,6 +58,7 @@
 						<tr>
 							<td><strong>Nombre:</strong></td>
 							<td><select name="" id="cbox2">
+								<option value="0"></option>
 								<option value="1">Saco alimento Royal Canin</option>
 								<option value="2">Saco alimento Don Cuchito</option>
 							</select></td>
@@ -108,7 +80,7 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
+							<button class="btn" id="bton1" onclick="alert('Producto agregado');">
 								Agregar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
@@ -118,7 +90,7 @@
 								Limpiar
 							</button>
 						</div>			
-						<table class="table table-bordered" style="border-collapse: 1px;">
+						<table class="table table-bordered" style="border-collapse: 3px; color: black;">
 							<thead>
 								<tr>
 									<th>ID</th>
@@ -131,17 +103,7 @@
 							<tbody id="res">
 									  
 							</tbody>
-						</table>
-						<hr>
-						<hr/>
-						<p class="buttons center">				
-							<button class="btn" onclick="alert('guardado');">
-                                guardar
-                            </button>
-							<button class="btn" id="btn" onclick="alert('inventario refrescado');">
-                                refrescar
-                            </button>
-						</p>					
+						</table>					
 					</div>
 				</div>
 			</section>			
