--- a/maestro_producto.html
+++ b/maestro_producto.html
@@ -27,47 +27,17 @@
 	</head>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4">
-					<form method="POST" class="search_form">
-						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
-					</form>
-				</div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="historialCompra.html">Mi Cuenta</a></li>
-                            <li><a href="register admin.html">Admin</a></li>
-							<li><a href="cart.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="register.html">Iniciar sesion</a></li>				
-						</ul>
-					</div>
-				</div>
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="administrar_tienda.html">Administrar Tienda</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="index.html">Cerrar Sesión</a></li>		
+					</ul>
 			</div>
 		</div>
-		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
-						<ul>
-							<li><a>Perros</a>					
-								<ul>
-									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
-									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
-								</ul>
-							</li>															
-							<li><a>Gatos</a>					
-								<ul>
-									<li><a href="./alimentoGato.html">Alimentos</a></li>									
-									<li><a href="./accesorioGato.html">Accesorios</a></li>								
-								</ul>
-							</li>							
-						</ul>
-					</nav>
-				</div>
-			</section>				
+		<div id="wrapper" class="container">				
 			<section class="main-content">
 			    <br>
 				<h2><span>Mantenedor de producto</span></h2>
@@ -124,14 +94,14 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
-								Agregar
+							<button class="btn" id="btn1.3" onclick="alert('Producto agregado');">
+								Guardar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
 								Nuevo
 							</button>
 							<button class="btn" id="btn3" >
-								Limpiar
+								Eliminar
 							</button>
 						</div>			
 						<table class="table table-bordered" style="border-collapse: 1px;">
@@ -149,17 +119,7 @@
 							<tbody id="rep">
 									  
 							</tbody>
-						</table>
-						<hr>
-						<hr/>
-						<p class="buttons center">				
-							<button class="btn" onclick="alert('guardado');">
-                                guardar
-                            </button>
-							<button class="btn" id="btn" onclick="alert('inventario refrescado');">
-                                refrescar
-                            </button>
-						</p>					
+						</table>					
 					</div>
 				</div>
 			</section>			
