--- a/maestro_usuario.html
+++ b/maestro_usuario.html
@@ -27,47 +27,18 @@
 	</head>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4">
-					<form method="POST" class="search_form">
-						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
-					</form>
-				</div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="historialCompra.html">Mi Cuenta</a></li>
-                            <li><a href="register admin.html">Admin</a></li>
-							<li><a href="cart.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="register.html">Iniciar sesion</a></li>				
-						</ul>
-					</div>
-				</div>
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="administrar_tienda.html">Administrar Tienda</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="index.html">Cerrar Sesión</a></li>		
+					</ul>
 			</div>
 		</div>
 		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
-						<ul>
-							<li><a>Perros</a>					
-								<ul>
-									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
-									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
-								</ul>
-							</li>															
-							<li><a>Gatos</a>					
-								<ul>
-									<li><a href="./alimentoGato.html">Alimentos</a></li>									
-									<li><a href="./accesorioGato.html">Accesorios</a></li>								
-								</ul>
-							</li>							
-						</ul>
-					</nav>
-				</div>
-			</section>				
+							
 			<section class="main-content">
 			    <br>
 				<h3><span>Mantenedor de usuario</span></h3>
@@ -79,23 +50,23 @@
 						</tr>
 						<tr>
 							<td><strong>Tipo de usuario:</strong></td>
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+							<td>
+								<input class="checkbox" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
 								<label class="form-check-label" for="inlineRadio1">Cliente</label>
-							  </div>
-							  <div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+							</td>
+							<td>	
+								<input class="checkbox" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">	
 								<label class="form-check-label" for="inlineRadio2">Admin</label>
-							  </div>
+							</td>
 							
 						</tr>
 						<tr>
 							<td><strong>Rut:</strong></td>
-							<td><td><input type="text"  Placeholder=""></td></td>
+							<td><input type="text"  Placeholder=""></td>
 						</tr>
 						<tr>
 							<td><strong>Nombre:</strong></td>
-							<td><td><input type="text"  Placeholder=""></td></td>
+							<td><input type="text"  Placeholder=""></td>
 						</tr>
 						<tr>
 							<td><strong>Direccion:</strong></td>
@@ -103,16 +74,18 @@
 						</tr>
 						<tr>
 							<td><strong>Con subcripción</strong></td>
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="flexCheckDisabled" disabled>
-								<label class="form-check-label" for="flexCheckDisabled">
-								  Deseo subscrbirme con un aparte de $3000 mensuales y obtener un %5 de descuento en mis compras
-								</label>
-							  </div>
+							<td>
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckDisabled" disabled>
+									<label class="form-check-label" for="flexCheckDisabled">
+									  Deseo subscrbirme con un aparte de $3000 mensuales y obtener un %5 de descuento en mis compras
+									</label>
+								  </div>
+							</td>
 						</tr>
 						<tr>
 							<td><strong>Contraseña</strong></td>
-							<td><td><input type="password"  Placeholder=""></td></td>
+							<td><input type="password"  Placeholder=""></td>
 						</tr>
 					</table>
 				</div>
@@ -127,14 +100,14 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
-								Agregar
+							<button class="btn" id="btn1.2" onclick="alert('Producto agregado');">
+								Guardar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
 								Nuevo
 							</button>
 							<button class="btn" id="btn3" >
-								Limpiar
+								Eliminars
 							</button>
 						</div>			
 						<table class="table table-bordered" style="border-collapse: 1px;">
@@ -152,15 +125,7 @@
 							</tbody>
 						</table>
 						<hr>
-						<hr/>
-						<p class="buttons center">				
-							<button class="btn" onclick="alert('guardado');">
-                                guardar
-                            </button>
-							<button class="btn" id="btn" onclick="alert('inventario refrescado');">
-                                refrescar
-                            </button>
-						</p>					
+						<hr/>					
 					</div>
 				</div>
 			</section>			
