--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -27,23 +27,17 @@
 	</head>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4">
-					<form method="POST" class="search_form">
-						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
-					</form>
-				</div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">
-							<li><a href="mis_compras.html">Mi Cuenta</a></li>
-							<li><a href="login.html">Iniciar sesion</a></li>
-							<li><a href="carrito_de_compras.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="registro.html">registrarse</a></li>				
-						</ul>
-					</div>
-				</div>
+			
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="inicio_cliente.html">Inicio</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="#">Mis datos</a></li>
+						<li><a href="mis_compras.html">Mis compras</a></li>					
+						<li><a href="carrito_de_compras.html">Carrito</a></li>
+						<li><a href="index.html">Cerrar sesión</a></li>		
+					</ul>
 			</div>
 		</div>
 		<div id="wrapper" class="container">				
