--- a/registro.html
+++ b/registro.html
@@ -28,143 +28,120 @@
 	</head>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">
-							<li><a href="mis_compras.html">Mi Cuenta</a></li>
-							<li><a href="login.html">Iniciar sesion</a></li>
-							<li><a href="carrito_de_compras.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="registro.html">registrarse</a></li>		
-						</ul>
-					</div>
-				</div>
+			
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="inicio_cliente.html">Inicio</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="#">Mis datos</a></li>
+						<li><a href="mis_compras.html">Mis compras</a></li>					
+						<li><a href="carrito_de_compras.html">Carrito</a></li>
+						<li><a href="index.html">Cerrar sesión</a></li>		
+					</ul>
 			</div>
 		</div>
-		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
-						<ul>
-							<li><a>Perros</a>					
-								<ul>
-									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
-									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
-								</ul>
-							</li>															
-							<li><a>Gatos</a>					
-								<ul>
-									<li><a href="./alimentoGato.html">Alimentos</a></li>									
-									<li><a href="./accesorioGato.html">Accesorios</a></li>								
-								</ul>
-							</li>							
-						</ul>
-					</nav>
-				</div>
-			</section>			
-			<section class="header_text sub">
-			<br>
+
     <div class="container">
-        <div class="row borde-bootstrap-row">
+        <br><br>
+        <div class="borde-bootstrap-row">
             <h4>Formulario de Registro</h4>
         </div>
         <br>
         <form class="form-stacked" action="registro.php" method="post" name="registro" id="registro">
-            <div class="row borde-bootstrap-row">
-                <div class="span6">
-                    <div class="form-group">
-                        <label for="rut" class="control-label">RUT</label>
-                        <div class="controls">
-                            <input class="form-control" type="text" name="rut" id="rut" 
-                            aria-describedby="rut-help" placeholder="Ingresa tu RUT">
+                <div class="row borde-bootstrap-row">
+                    <div class="span6">
+                        <div class="form-group">
+                            <label for="rut" class="control-label">RUT</label>
+                            <div class="controls">
+                                <input class="form-control" type="text" name="rut" id="rut" 
+                                aria-describedby="rut-help" placeholder="Ingresa tu RUT">
+                            </div>
+                            <small id="rut-help" class="form-text text-muted">
+                                Escribe tu RUT sin puntos y con guión, por ejemplo: 16560241-2
+                            </small>
                         </div>
-                        <small id="rut-help" class="form-text text-muted">
-                            Escribe tu RUT sin puntos y con guión, por ejemplo: 16560241-2
-                        </small>
-                    </div>
-                    <div class="form-group">
-                        <label for="nombres" class="control-label">Nombres</label>
-                        <div class="controls">
-                        <input class="form-control" type="text" name="nombres" id="nombres" 
-                            placeholder="Escribe aquí tus nombres">
+                        <div class="form-group">
+                            <label for="nombres" class="control-label">Nombres</label>
+                            <div class="controls">
+                            <input class="form-control" type="text" name="nombres" id="nombres" 
+                                placeholder="Escribe aquí tus nombres">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="apellidos" class="control-label">Apellidos</label>
+                            <div class="controls">
+                            <input class="form-control" type="text" name="apellidos" id="apellidos" 
+                                placeholder="Escribe aquí tus apellidos">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="correo" class="control-label">Correo</label>
+                            <div class="controls">
+                            <input class="form-control" type="email" name="correo" id="correo" 
+                                aria-describedby="correo-help" placeholder="Escribe aquí tu correo">
+                            </div>
+                            <small id="correo-help" class="form-text text-muted">
+                                Escribe tu correo incluyendo: nombre, @ y dominio, por ejemplo: atorres@duocuc.cl
+                            </small>
+                        </div>
+                        <div class="form-group">
+                            <label for="direccion" class="control-label">Dirección</label>
+                            <div class="controls">
+                            <textarea class="form-control" name="direccion" id="direccion" cols="60" rows="5" 
+                                aria-describedby="direccion-help"placeholder="Escribe aquí tu dirección"></textarea>
+                            </div>
+                            <small id="direccion-help" class="form-text text-muted">
+                                Escribe tu direción completa con: calle, número, comuna y región
+                            </small>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="consubscripcion" name="consubscripcion" 
+                                aria-describedby="consubscripcion-help">
+                            <label class="form-check-label" for="consubscripcion">Con subscripción</label>
+                            <small id="consubscripcion-help" class="form-text text-muted">
+                                Deseo subscribirme con un aporte de $3.000 mensuales
+                                y obtener un 5% de descuento en mis copmpras
+                            </small>
+                        </div>
+                        <div class="form-group">
+                            <br>
+                            <label for="password" class="control-label">Contraseña</label>
+                            <div class="controls">
+                            <input class="form-control" type="password" name="password" id="password" 
+                                aria-describedby="password-help" placeholder="Escribe aquí tu contraseña">
+                            </div>
+                            <small id="password-help" class="form-text text-muted">
+                                La contraseña debe tener un mínimo de 10 caracteres y 
+                                debe contener al menos una mayúscula y un número
+                            </small>
+                        </div>
+                        <div class="form-group">
+                            <label for="password2" class="control-label">Repetir contraseña</label>
+                            <div class="controls">
+                            <input class="form-control" type="password" name="password2" id="password2" 
+                                placeholder="Repite aquí tu contraseña">
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="apellidos" class="control-label">Apellidos</label>
-                        <div class="controls">
-                        <input class="form-control" type="text" name="apellidos" id="apellidos" 
-                            placeholder="Escribe aquí tus apellidos">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="correo" class="control-label">Correo</label>
-                        <div class="controls">
-                        <input class="form-control" type="email" name="correo" id="correo" 
-                            aria-describedby="correo-help" placeholder="Escribe aquí tu correo">
-                        </div>
-                        <small id="correo-help" class="form-text text-muted">
-                            Escribe tu correo incluyendo: nombre, @ y dominio, por ejemplo: atorres@duocuc.cl
-                        </small>
-                    </div>
-                    <div class="form-group">
-                        <label for="direccion" class="control-label">Dirección</label>
-                        <div class="controls">
-                        <textarea class="form-control" name="direccion" id="direccion" cols="60" rows="5" 
-                            aria-describedby="direccion-help"placeholder="Escribe aquí tu dirección"></textarea>
-                        </div>
-                        <small id="direccion-help" class="form-text text-muted">
-                            Escribe tu direción completa con: calle, número, comuna y región
-                        </small>
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="consubscripcion" name="consubscripcion" 
-                            aria-describedby="consubscripcion-help">
-                        <label class="form-check-label" for="consubscripcion">Con subscripción</label>
-                        <small id="consubscripcion-help" class="form-text text-muted">
-                            Deseo subscribirme con un aporte de $3.000 mensuales
-                            y obtener un 5% de descuento en mis copmpras
-                        </small>
-                    </div>
-                    <div class="form-group">
-                        <br>
-                        <label for="password" class="control-label">Contraseña</label>
-                        <div class="controls">
-                        <input class="form-control" type="password" name="password" id="password" 
-                            aria-describedby="password-help" placeholder="Escribe aquí tu contraseña">
-                        </div>
-                        <small id="password-help" class="form-text text-muted">
-                            La contraseña debe tener un mínimo de 10 caracteres y 
-                            debe contener al menos una mayúscula y un número
-                        </small>
-                    </div>
-                    <div class="form-group">
-                        <label for="password2" class="control-label">Repetir contraseña</label>
-                        <div class="controls">
-                        <input class="form-control" type="password" name="password2" id="password2" 
-                            placeholder="Repite aquí tu contraseña">
+                    <div class="span3">
+                        <div class="form-group">
+                            <img src="images/cristian_gomez.jpg" alt="" name="fotoperfil" id="fotoperfil">
+                            <br><br>
+                            <input class="form-control-file" type="file" name="buscarfoto" id="buscarfoto">
                         </div>
                     </div>
                 </div>
-                <div class="span3">
-                    <div class="form-group">
-                        <img src="images/cristian_gomez.jpg" alt="" name="fotoperfil" id="fotoperfil">
-                        <br><br>
-                        <input class="form-control-file" type="file" name="buscarfoto" id="buscarfoto">
-                    </div>
+                <div class="row borde-bootstrap-row">
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    &nbsp;&nbsp;&nbsp;
+                    <button type="reset" class="btn btn-secondary">Limpiar</button>
                 </div>
-            </div>
-            <div class="row borde-bootstrap-row">
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                &nbsp;&nbsp;&nbsp;
-                <button type="reset" class="btn btn-secondary">Limpiar</button>
-            </div>
-            <hr>
-            <div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
-        </fieldset>
-    </form>					
-</div>				
+                <hr>
+                <div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
+            </fieldset>
+        </form>					
+    </div>				
 </div>
 </section>			
 <section id="footer-bar">
