--- a/administrar_tienda.html
+++ b/administrar_tienda.html
@@ -27,6 +27,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
+		<link rel="icon" type="image/png" href="themes/images/logo.png">
 	</head>
     <body>		
 		<div id="top-bar" class="container">
@@ -36,7 +37,8 @@
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="administrar_tienda.html">Administrar Tienda</a></li>
 						<li><a href="sobre_nosotros.html">Nosotros</a></li>
-						<li><a href="index.html">Cerrar Sesión</a></li>		
+						<li><a href="index.html">Cerrar Sesión</a></li>
+						<li><a href="registro_ventas.html">registro ventas</a></li>		
 					</ul>
 			</div>
 		</div>
@@ -62,6 +64,9 @@
 										<button><a href="registro_ventas.html">historial de ventas</a></button>
 									</div>								<div class="control-group">
 										<button><a href="inventario.html">mantenedor de bodega</a></button>
+									</div>
+									</div>								<div class="control-group">
+										<button><a href="registro_ventas.html">Registro de ventas</a></button>
 									</div>
 								</div>
 						</div>
