--- a/ficha_producto_anon.html
+++ b/ficha_producto_anon.html
@@ -27,6 +27,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
+		<link rel="icon" type="image/png" href="themes/images/logo.png">
 	</head>
     <body>		
 		<div id="top-bar" class="container">
