--- a/maestro_producto.html
+++ b/maestro_producto.html
@@ -24,6 +24,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="themes/js/respond.min.js"></script>
 		<![endif]-->
+		<link rel="icon" type="image/png" href="themes/images/logo.png">
 	</head>
     <body>		
 		<div id="top-bar" class="container">
